Bug 20312 - System freeze with multiples of 32 in /proc/sys/net/ipv4/tcp_adv_win_scale
Summary: System freeze with multiples of 32 in /proc/sys/net/ipv4/tcp_adv_win_scale
Status: CLOSED CODE_FIX
Alias: None
Product: Networking
Classification: Unclassified
Component: IPV4 (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Alexey Dobriyan
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-14 14:43 UTC by Tobias Schmidbauer
Modified: 2011-01-23 16:22 UTC (History)
4 users (show)

See Also:
Kernel Version: 2.6.36-rc6
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Tobias Schmidbauer 2010-10-14 14:43:15 UTC
System freezes when setting /proc/sys/net/ipv4/tcp_adv_win_scale to a multiple of 32 and causing network traffic (for example ssh, wget, firefox, etc). Does NOT happen with ping

It also happens with kernel 2.6.26 (debian lenny). 

there is no output via dmesg, no logging about any system events in /var/log/messages or /var/log/syslog and nothing or on tty1



for example 

echo 32 > /proc/sys/net/ipv4/tcp_adv_win_scale
wget www.kernel.org



I tested
16 >> working
32 >> freeze
33 >> working
31 >> working
64 >> freeze
65 >> working
96 >> freeze
128 >> freeze
Comment 1 Tobias Schmidbauer 2010-10-14 14:49:04 UTC
Identical results on 32bit and 64bit systems
Comment 2 Alexey Dobriyan 2010-12-07 15:57:52 UTC
fixed in 2.6.37-rc4
"tcp: restrict net.ipv4.tcp_adv_win_scale (#20312)"
Comment 3 Martin Steigerwald 2010-12-07 21:14:18 UTC
Thanks a lot, Alexey.

Verified:

shambhala:~#1> LANG=C echo 32 > /proc/sys/net/ipv4/tcp_adv_win_scale
echo: write error: invalid argument
shambhala:~#1> LANG=C echo 31 > /proc/sys/net/ipv4/tcp_adv_win_scale
shambhala:~> LANG=C echo -31 > /proc/sys/net/ipv4/tcp_adv_win_scale
shambhala:~> LANG=C echo -32 > /proc/sys/net/ipv4/tcp_adv_win_scale
echo: write error: invalid argument

On 2.6.37-rc5.
Comment 4 Florian Mickler 2011-01-23 16:22:33 UTC
commit 0147fc058d11bd4009b126d09974d2c8f48fef15
Author: Alexey Dobriyan <adobriyan@gmail.com>
Date:   Mon Nov 22 12:54:21 2010 +0000

    tcp: restrict net.ipv4.tcp_adv_win_scale (#20312)

Note You need to log in before you can comment on or make changes to this bug.